# planner

./: .gitignore  Cargo.toml  build.rs  linker-aarch64-raspi5.ld
src/: architecture.rs  graphics.rs  lib.rs  main.rs  memory.rs  textio.rs
src/architecture/: aarch64.rs  x64.rs
src/graphics/: framebuffer.rs  limine_framebuffer.rs  raspi5_framebuffer.rs  videocore_framebuffer.rs
src/memory/: aarch64.rs  mapper.rs  x64.rs
src/memory/mapper/: limine_memory_map.rs  raspi5_memory_map.rs
src/textio/: fbprint.rs
