[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["limine_framebuffer", "fbprint"]
limine_framebuffer = ["limine", "framebuffer"]
limine = ["dep:limine"]
framebuffer = []
fbprint = ["framebuffer"]

[dependencies]
spin = "0.9"
limine = {version = "0.2", optional = true}

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"